--- a/template.html
+++ b/template.html
@@ -7,7 +7,7 @@
     <meta name="author" content="tmash">
     <meta name="description" content="7m45h html template">
     <meta name="keywords" content="7m45h, html, template">
-    <link rel="icon" type="image/png" href="/shared/images/logo.png">
+    <link rel="icon" type="image/png" href="/shared/images/favicon.png">
     <link rel="stylesheet" type="text/css" href="/shared/css/default.css">
   </head>
   <body>
