nar bar + nar menu complete

--- a/template.html
+++ b/template.html
@@ -9,7 +9,21 @@
     <meta name="keywords" content="7m45h, html, template">
     <link rel="icon" type="image/png" href="/shared/images/favicon.png">
     <link rel="stylesheet" type="text/css" href="/shared/css/default.css">
+    <link rel="stylesheet" type="text/css" href="/shared/css/miscellaneous.css">
+    <link rel="stylesheet" type="text/css" href="/shared/css/nav_bar.css">
+    <link rel="stylesheet" type="text/css" href="/shared/css/nav_menu.css">
+    <script src="/shared/scripts/nav_bar.js" defer></script>
   </head>
   <body>
+    <div id="nav-bar">
+      <nav class="nav-menu">
+        <h2 class="nav-menu-title">
+          <a class="anc-ext" href="/" target="_blank">head</a>
+        </h2>
+        <a class="nav-menu-index" href="#traget-a">target_a</a>
+        <a class="nav-menu-index" href="#traget-b">target_b</a>
+        <a class="nav-menu-index" href="#traget-c">target_c</a>
+      </nav>
+    </div>
   </body>
 </html>
