--- a/template.html
+++ b/template.html
@@ -12,7 +12,10 @@
     <link rel="stylesheet" type="text/css" href="/shared/css/miscellaneous.css">
     <link rel="stylesheet" type="text/css" href="/shared/css/nav_bar.css">
     <link rel="stylesheet" type="text/css" href="/shared/css/nav_menu.css">
+    <link rel="stylesheet" type="text/css" href="/shared/css/r_panel.css">
+    <link rel="stylesheet" type="text/css" href="/shared/css/main.css">
     <script src="/shared/scripts/nav_bar.js" defer></script>
+    <script src="/shared/scripts/r_panel.js" defer></script>
   </head>
   <body>
     <div id="nav-bar">
@@ -24,6 +27,12 @@
         <a class="nav-menu-index" href="#traget-b">target_b</a>
         <a class="nav-menu-index" href="#traget-c">target_c</a>
       </nav>
+    </div>
+    <main></main>
+    <div id="r-panel">
+      <footer>
+        <p>17 Dec 2023</p>
+      </footer>
     </div>
   </body>
 </html>
