complete: p nav-bar nav-menu | start r-panel img section

--- a/template.html
+++ b/template.html
@@ -14,6 +14,7 @@
     <link rel="stylesheet" type="text/css" href="/shared/css/nav_menu.css">
     <link rel="stylesheet" type="text/css" href="/shared/css/r_panel.css">
     <link rel="stylesheet" type="text/css" href="/shared/css/main.css">
+    <link rel="stylesheet" type="text/css" href="/shared/css/img.css">
     <script src="/shared/scripts/nav_bar.js" defer></script>
     <script src="/shared/scripts/r_panel.js" defer></script>
   </head>
@@ -23,12 +24,36 @@
         <h2 class="nav-menu-title">
           <a class="anc-ext" href="/" target="_blank">head</a>
         </h2>
-        <a class="nav-menu-index" href="#traget-a">target_a</a>
-        <a class="nav-menu-index" href="#traget-b">target_b</a>
-        <a class="nav-menu-index" href="#traget-c">target_c</a>
+        <a class="nav-menu-index" href="#target-a">target_a</a>
+        <a class="nav-menu-index" href="#target-b">target_b</a>
+        <a class="nav-menu-index" href="#target-c">target_c</a>
       </nav>
     </div>
-    <main></main>
+    <main>
+      <div id="target-a" class="main-section">
+        <nav class="nav-menu">
+          <h2 class="nav-menu-title">
+            <a class="anc-ext" href="/" target="_blank">sub head</a>
+          </h2>
+          <a class="nav-menu-index" href="#target-d">target_d</a>
+          <a class="nav-menu-index" href="#target-e">target_e</a>
+          <a class="nav-menu-index" href="#target-f">target_f</a>
+        </nav>
+      </div>
+      <div id="target-b" class="main-section">
+        <p>
+          Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Sodales ut eu sem integer vitae justo eget magna fermentum. Quam viverra orci sagittis eu volutpat odio facilisis mauris sit. Nulla posuere sollicitudin aliquam ultrices. Dolor sed viverra ipsum nunc aliquet. Odio eu feugiat pretium nibh ipsum consequat nisl vel. Quis risus sed vulputate odio ut enim blandit volutpat maecenas. Risus at ultrices mi tempus. Lectus urna duis convallis convallis tellus id. Aliquet bibendum enim facilisis gravida neque convallis. Blandit aliquam etiam erat velit scelerisque in. Posuere sollicitudin aliquam ultrices sagittis orci. Phasellus egestas tellus rutrum tellus pellentesque eu tincidunt.
+        </p>
+        <figure>
+          <img src="https://picsum.photos/1280/720/">
+          <figcaption>
+            <a class="anc-ext" href="https://picsum.photos/" target="_blank">credit_a</a>
+            <a class="anc-ext" href="https://picsum.photos/" target="_blank">credit_b</a>
+          </figcaption>
+        </figure>
+      </div>
+      <div id="target-c" class="main-section"></div>
+    </main>
     <div id="r-panel">
       <footer>
         <p>17 Dec 2023</p>
