last update date on footer

--- a/template.html
+++ b/template.html
@@ -52,7 +52,7 @@
     </main>
     <div id="r-panel">
       <footer>
-        <p>17 Dec 2023</p>
+        <p title="last updated">17 Dec 2023</p>
       </footer>
     </div>
   </body>
