--- a/template.html
+++ b/template.html
@@ -15,6 +15,7 @@
     <link rel="stylesheet" type="text/css" href="/shared/css/r_panel.css">
     <link rel="stylesheet" type="text/css" href="/shared/css/main.css">
     <link rel="stylesheet" type="text/css" href="/shared/css/img.css">
+    <link rel="stylesheet" type="text/css" href="/shared/css/video.css">
     <script src="/shared/scripts/nav_bar.js" defer></script>
     <script src="/shared/scripts/r_panel.js" defer></script>
     <script src="/shared/scripts/rand_img.js" defer></script>
@@ -48,7 +49,18 @@
         <figure class="rand-img">
         </figure>
       </div>
-      <div id="target-c" class="main-section"></div>
+      <div id="target-c" class="main-section">
+        <div class="video">
+          <video controls>
+            <source src="https://archive.org/download/BigBuckBunny_124/Content/big_buck_bunny_720p_surround.mp4" type="video/mp4">
+          </video>
+          <div class="video-caption">
+            <a class="anc-ext" href="https://www.blender.org/" target="_blank">blender.org</a>
+            <a class="anc-ext" href="https://archive.org/" target="_blank">archive.org</a>
+            <a class="anc-ext" href="https://developer.mozilla.org/" target="_blank">mdn</a>
+          </div>
+        </div>
+      </div>
     </main>
     <div id="r-panel">
       <footer>
