remove r-panel and play footer at bottom

--- a/template.html
+++ b/template.html
@@ -9,15 +9,14 @@
     <meta name="keywords" content="7m45h, html, template">
     <link rel="icon" type="image/png" href="/shared/images/favicon.png">
     <link rel="stylesheet" type="text/css" href="/shared/css/default.css">
+    <link rel="stylesheet" type="text/css" href="/shared/css/footer.css">
     <link rel="stylesheet" type="text/css" href="/shared/css/miscellaneous.css">
     <link rel="stylesheet" type="text/css" href="/shared/css/nav_bar.css">
     <link rel="stylesheet" type="text/css" href="/shared/css/nav_menu.css">
-    <link rel="stylesheet" type="text/css" href="/shared/css/r_panel.css">
     <link rel="stylesheet" type="text/css" href="/shared/css/main.css">
     <link rel="stylesheet" type="text/css" href="/shared/css/img.css">
     <link rel="stylesheet" type="text/css" href="/shared/css/video.css">
     <script src="/shared/scripts/nav_bar.js" defer></script>
-    <script src="/shared/scripts/r_panel.js" defer></script>
     <script src="/shared/scripts/rand_img.js" defer></script>
   </head>
   <body>
@@ -62,10 +61,8 @@
         </div>
       </div>
     </main>
-    <div id="r-panel">
-      <footer>
-        <p title="last updated">17 Dec 2023</p>
-      </footer>
-    </div>
+    <footer>
+      <p title="last updated">17 Dec 2023</p>
+    </footer>
   </body>
 </html>
