--- a/template.html
+++ b/template.html
@@ -50,6 +50,11 @@
         <p>
           Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Suspendisse sed nisi lacus sed viverra tellus in hac. Vulputate sapien nec sagittis aliquam malesuada bibendum arcu. Mattis molestie a iaculis at. Enim nec dui nunc mattis enim ut. Integer quis auctor elit sed vulputate mi sit. Amet consectetur adipiscing elit pellentesque habitant morbi tristique senectus et. Sagittis vitae et leo duis ut diam quam. Molestie a iaculis at erat pellentesque adipiscing. Diam phasellus vestibulum lorem sed. A diam sollicitudin tempor id eu nisl. Egestas congue quisque egestas diam in arcu cursus. Sit amet consectetur adipiscing elit ut aliquam purus.
         </p>
+        <figure class="rand-img">
+        </figure>
+        <p>
+          Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Suspendisse sed nisi lacus sed viverra tellus in hac. Vulputate sapien nec sagittis aliquam malesuada bibendum arcu. Mattis molestie a iaculis at. Enim nec dui nunc mattis enim ut. Integer quis auctor elit sed vulputate mi sit. Amet consectetur adipiscing elit pellentesque habitant morbi tristique senectus et. Sagittis vitae et leo duis ut diam quam. Molestie a iaculis at erat pellentesque adipiscing. Diam phasellus vestibulum lorem sed. A diam sollicitudin tempor id eu nisl. Egestas congue quisque egestas diam in arcu cursus. Sit amet consectetur adipiscing elit ut aliquam purus.
+        </p>
       </div>
       <div id="target-c" class="main-section">
         <p>
@@ -67,6 +72,20 @@
         </div>
         <p>
           Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Sodales ut eu sem integer vitae justo eget magna fermentum. Quam viverra orci sagittis eu volutpat odio facilisis mauris sit. Nulla posuere sollicitudin aliquam ultrices. Dolor sed viverra ipsum nunc aliquet. Odio eu feugiat pretium nibh ipsum consequat nisl vel. Quis risus sed vulputate odio ut enim blandit volutpat maecenas. Risus at ultrices mi tempus. Lectus urna duis convallis convallis tellus id. Aliquet bibendum enim facilisis gravida neque convallis. Blandit aliquam etiam erat velit scelerisque in. Posuere sollicitudin aliquam ultrices sagittis orci. Phasellus egestas tellus rutrum tellus pellentesque eu tincidunt.
+        </p>
+        <figure class="rand-img">
+        </figure>
+        <p>
+          Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Suspendisse sed nisi lacus sed viverra tellus in hac. Vulputate sapien nec sagittis aliquam malesuada bibendum arcu. Mattis molestie a iaculis at. Enim nec dui nunc mattis enim ut. Integer quis auctor elit sed vulputate mi sit. Amet consectetur adipiscing elit pellentesque habitant morbi tristique senectus et. Sagittis vitae et leo duis ut diam quam. Molestie a iaculis at erat pellentesque adipiscing. Diam phasellus vestibulum lorem sed. A diam sollicitudin tempor id eu nisl. Egestas congue quisque egestas diam in arcu cursus. Sit amet consectetur adipiscing elit ut aliquam purus.
+        </p>
+      </div>
+      <div id="target-d" class="main-section">
+        <figure class="rand-img">
+        </figure>
+      </div>
+      <div id="target-e" class="main-section">
+        <p>
+          Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Suspendisse sed nisi lacus sed viverra tellus in hac. Vulputate sapien nec sagittis aliquam malesuada bibendum arcu. Mattis molestie a iaculis at. Enim nec dui nunc mattis enim ut. Integer quis auctor elit sed vulputate mi sit. Amet consectetur adipiscing elit pellentesque habitant morbi tristique senectus et. Sagittis vitae et leo duis ut diam quam. Molestie a iaculis at erat pellentesque adipiscing. Diam phasellus vestibulum lorem sed. A diam sollicitudin tempor id eu nisl. Egestas congue quisque egestas diam in arcu cursus. Sit amet consectetur adipiscing elit ut aliquam purus.
         </p>
       </div>
     </main>
