essay_on_subnautica: complete

--- a/index.html
+++ b/index.html
@@ -25,11 +25,20 @@
         <h2 class="nav-menu-title">
           <a class="anc-ext" href="/" target="_blank">home</a>
         </h2>
+        <a class="nav-menu-index" href="#blog">blog</a>
         <a class="nav-menu-index" href="#etc">etc</a>
         <a class="nav-menu-index" href="#about">about</a>
       </nav>
     </div>
     <main>
+      <div id="blog" class="main-section">
+        <nav class="nav-menu">
+          <h2 class="nav-menu-title">
+            <a class="anc-ext" href="/" target="_blank">blog</a>
+          </h2>
+          <a class="nav-menu-index" href="./blog/essay_on_subnautica">essay_on_subnautica</a>
+        </nav>
+      </div>
       <div id="etc" class="main-section">
         <nav class="nav-menu">
           <h2 class="nav-menu-title">
@@ -44,7 +53,7 @@
       </div>
     </main>
     <footer>
-      <p title="last updated">17 Dec 2023</p>
+      <p title="date created">18 Dec 2023</p>
     </footer>
   </body>
 </html>
