--- a/index.html
+++ b/index.html
@@ -45,6 +45,7 @@
           <h2 class="nav-menu-title">
             <a class="anc-ext" href="/" target="_blank">etc</a>
           </h2>
+          <a class="nav-menu-index" href="./mudskipper">mudskipper</a>
           <a class="nav-menu-index" href="./template">template</a>
         </nav>
       </div>
