--- a/index.html
+++ b/index.html
@@ -37,8 +37,9 @@
           <h2 class="nav-menu-title">
             <a class="anc-ext" href="/" target="_blank">blog</a>
           </h2>
-          <a class="nav-menu-index" href="./blog/essay_on_subnautica">essay_on_subnautica</a>
-          <a class="nav-menu-index" href="./blog/evil_list">evil_list</a>
+          <a class="nav-menu-index" href="./blog/essay_on_subnautica/">essay_on_subnautica</a>
+          <a class="nav-menu-index" href="./blog/evil_list/">evil_list</a>
+          <a class="nav-menu-index" href="./blog/foss_v_proprietary/">foss_v_proprietary</a>
         </nav>
       </div>
       <div id="etc" class="main-section">
@@ -46,8 +47,8 @@
           <h2 class="nav-menu-title">
             <a class="anc-ext" href="/" target="_blank">etc</a>
           </h2>
-          <a class="nav-menu-index" href="./mudskipper">mudskipper</a>
-          <a class="nav-menu-index" href="./template">template</a>
+          <a class="nav-menu-index" href="./mudskipper/">mudskipper</a>
+          <a class="nav-menu-index" href="./template/">template</a>
         </nav>
       </div>
       <div id="about" class="main-section center">
