--- a/index.html
+++ b/index.html
@@ -40,6 +40,7 @@
           <a class="nav-menu-index" href="./blog/essay_on_subnautica/">essay_on_subnautica</a>
           <a class="nav-menu-index" href="./blog/evil_list/">evil_list</a>
           <a class="nav-menu-index" href="./blog/foss_v_proprietary/">foss_v_proprietary</a>
+          <a class="nav-menu-index" href="./blog/scary_library/">scary_library</a>
         </nav>
       </div>
       <div id="etc" class="main-section">
