--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
           <a class="anc-ext" href="/" target="_blank">home</a>
         </h2>
         <a class="nav-menu-index" href="#blog">blog</a>
+        <a class="nav-menu-index" href="#canv">canv</a>
         <a class="nav-menu-index" href="#etc">etc</a>
         <a class="nav-menu-index" href="#about">about</a>
       </nav>
@@ -41,6 +42,14 @@
           <a class="nav-menu-index" href="./blog/evil_list/">evil_list</a>
           <a class="nav-menu-index" href="./blog/foss_v_proprietary/">foss_v_proprietary</a>
           <a class="nav-menu-index" href="./blog/scary_library/">scary_library</a>
+        </nav>
+      </div>
+      <div id="canv" class="main-section">
+        <nav class="nav-menu">
+          <h2 class="nav-menu-title">
+            <a class="anc-ext" href="/" target="_blank">canv</a>
+          </h2>
+          <a class="nav-menu-index" href="./canv/atoms/">atoms</a>
         </nav>
       </div>
       <div id="etc" class="main-section">
