complete: cube and fix: atoms metadata

--- a/canv/cube/index.html
+++ b/canv/cube/index.html
@@ -3,10 +3,10 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>atoms</title>
+    <title>cube</title>
     <meta name="author" content="tmash">
-    <meta name="description" content="atoms with verlet integration">
-    <meta name="keywords" content="js, atoms, verlet integration">
+    <meta name="description" content="cube spinning on x y z">
+    <meta name="keywords" content="spinning, cube">
     <link rel="icon" type="image/png" href="/shared/images/favicon.png">
     <link rel="stylesheet" type="text/css" href="/shared/css/root.css">
     <link rel="stylesheet" type="text/css" href="/shared/css/default.css">
@@ -16,13 +16,13 @@
     <link rel="stylesheet" type="text/css" href="/shared/css/nav_menu.css">
     <link rel="stylesheet" type="text/css" href="/shared/css/main.css">
     <script src="/shared/scripts/nav_bar.js" defer></script>
-    <script src="./scripts/atoms.js" defer></script>
+    <script src="./scripts/cube.js" defer></script>
   </head>
   <body>
     <div id="nav-bar">
       <nav class="nav-menu">
         <h2 class="nav-menu-title">
-          <a class="anc-ext" href="/" target="_blank">atoms</a>
+          <a class="anc-ext" href="/" target="_blank">cube</a>
         </h2>
         <a class="nav-menu-index" href="/">home</a>
       </nav>
