--- a/index.html
+++ b/index.html
@@ -50,6 +50,7 @@
             <a class="anc-ext" href="/" target="_blank">canv</a>
           </h2>
           <a class="nav-menu-index" href="./canv/atoms/">atoms</a>
+          <a class="nav-menu-index" href="./canv/cube/">cube</a>
         </nav>
       </div>
       <div id="etc" class="main-section">
