--- a/index.html
+++ b/index.html
@@ -51,6 +51,7 @@
           </h2>
           <a class="nav-menu-index" href="./canv/atoms/">atoms</a>
           <a class="nav-menu-index" href="./canv/cube/">cube</a>
+          <a class="nav-menu-index" href="./canv/game_of_life/">game_of_life</a>
         </nav>
       </div>
       <div id="etc" class="main-section">
