--- a/index.html
+++ b/index.html
@@ -54,6 +54,7 @@
           <a class="nav-menu-index" href="./canv/game_of_life/">game_of_life</a>
           <a class="nav-menu-index" href="./canv/quad_tree/">quad_tree</a>
           <a class="nav-menu-index" href="./canv/snake/">snake</a>
+          <a class="nav-menu-index" href="./canv/top_down/">top_down</a>
         </nav>
       </div>
       <div id="etc" class="main-section">
