--- a/index.html
+++ b/index.html
@@ -55,6 +55,7 @@
           <a class="nav-menu-index" href="./canv/quad_tree/">quad_tree</a>
           <a class="nav-menu-index" href="./canv/snake/">snake</a>
           <a class="nav-menu-index" href="./canv/top_down/">top_down</a>
+          <a class="nav-menu-index" href="./canv/vector/">vector</a>
         </nav>
       </div>
       <div id="etc" class="main-section">
