add repo links to page heading

--- a/canv/top_down/index.html
+++ b/canv/top_down/index.html
@@ -22,9 +22,9 @@
     <div id="nav-bar">
       <nav class="nav-menu">
         <h2 class="nav-menu-title">
-          <a class="anc-ext" href="/" target="_blank">top_down</a>
+          <a class="anc-ext" href="https://github.com/7m45h/7m45h.github.io/tree/master/canv/top_down" target="_blank">top_down</a>
         </h2>
-        <a class="nav-menu-index" href="/">home</a>
+        <a class="nav-menu-index" href="/#canv">home</a>
       </nav>
     </div>
     <main>
