--- a/404.html
+++ b/404.html
@@ -21,7 +21,7 @@
     <div id="nav-bar">
       <nav class="nav-menu">
         <h2 class="nav-menu-title">
-          <a class="anc-ext" href="/" target="_blank">404</a>
+          <a class="anc-ext" href="https://github.com/7m45h/7m45h.github.io/blob/master/404.html" target="_blank">404</a>
         </h2>
         <a class="nav-menu-index" href="/">home</a>
       </nav>
