--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     <div id="nav-bar">
       <nav class="nav-menu">
         <h2 class="nav-menu-title">
-          <a class="anc-ext" href="/" target="_blank">home</a>
+          <a class="anc-ext" href="https://github.com/7m45h/7m45h.github.io" target="_blank">home</a>
         </h2>
         <a class="nav-menu-index" href="#blog">blog</a>
         <a class="nav-menu-index" href="#canv">canv</a>
@@ -36,7 +36,7 @@
       <div id="blog" class="main-section">
         <nav class="nav-menu">
           <h2 class="nav-menu-title">
-            <a class="anc-ext" href="/" target="_blank">blog</a>
+            <a class="anc-ext" href="https://github.com/7m45h/7m45h.github.io/tree/master/blog" target="_blank">blog</a>
           </h2>
           <a class="nav-menu-index" href="./blog/essay_on_subnautica/">essay_on_subnautica</a>
           <a class="nav-menu-index" href="./blog/evil_list/">evil_list</a>
@@ -47,7 +47,7 @@
       <div id="canv" class="main-section">
         <nav class="nav-menu">
           <h2 class="nav-menu-title">
-            <a class="anc-ext" href="/" target="_blank">canv</a>
+            <a class="anc-ext" href="https://github.com/7m45h/7m45h.github.io/tree/master/canv" target="_blank">canv</a>
           </h2>
           <a class="nav-menu-index" href="./canv/atoms/">atoms</a>
           <a class="nav-menu-index" href="./canv/cube/">cube</a>
@@ -61,7 +61,7 @@
       <div id="etc" class="main-section">
         <nav class="nav-menu">
           <h2 class="nav-menu-title">
-            <a class="anc-ext" href="/" target="_blank">etc</a>
+            <a class="anc-ext" href="" target="_blank">etc</a>
           </h2>
           <a class="nav-menu-index" href="./mudskipper/">mudskipper</a>
           <a class="nav-menu-index" href="./template/">template</a>
