--- a/404.html
+++ b/404.html
@@ -15,6 +15,7 @@
     <link rel="stylesheet" type="text/css" href="/shared/css/nav_bar.css">
     <link rel="stylesheet" type="text/css" href="/shared/css/nav_menu.css">
     <link rel="stylesheet" type="text/css" href="/shared/css/main.css">
+    <link rel="stylesheet" type="text/css" href="/shared/css/404.css">
     <script src="/shared/scripts/nav_bar.js" defer></script>
   </head>
   <body>
@@ -27,8 +28,8 @@
       </nav>
     </div>
     <main>
-      <div class="main-section">
-        <iframe src="https://en.wikipedia.org/wiki/HTTP_404"></iframe>
+      <div class="main-section center">
+        <h2>404</h2>
       </div>
     </main>
     <footer>
