give poster credits on evil_list + add rooms247 on home index

--- a/index.html
+++ b/index.html
@@ -65,6 +65,7 @@
           </h2>
           <a class="nav-menu-index" href="./mudskipper/">mudskipper</a>
           <a class="nav-menu-index" href="./template/">template</a>
+          <a class="nav-menu-index" href="./rooms247_client/" target="_blank">rooms247</a>
         </nav>
       </div>
       <div id="about" class="main-section center">
