--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
       </nav>
     </div>
     <main>
-      <div id="blog" class="main-section">
+      <div id="blog" class="main-section center">
         <nav class="nav-menu">
           <h2 class="nav-menu-title">
             <a class="anc-ext" href="https://github.com/7m45h/7m45h.github.io/tree/master/blog" target="_blank">blog</a>
@@ -44,7 +44,7 @@
           <a class="nav-menu-index" href="./blog/scary_library/">scary_library</a>
         </nav>
       </div>
-      <div id="canv" class="main-section">
+      <div id="canv" class="main-section center">
         <nav class="nav-menu">
           <h2 class="nav-menu-title">
             <a class="anc-ext" href="https://github.com/7m45h/7m45h.github.io/tree/master/canv" target="_blank">canv</a>
@@ -58,7 +58,7 @@
           <a class="nav-menu-index" href="./canv/vector/">vector</a>
         </nav>
       </div>
-      <div id="etc" class="main-section">
+      <div id="etc" class="main-section center">
         <nav class="nav-menu">
           <h2 class="nav-menu-title">
             <a class="anc-ext" href="" target="_blank">etc</a>
