--- a/index.html
+++ b/index.html
@@ -10,10 +10,14 @@
     <link rel="icon" type="image/png" href="/shared/images/favicon_dark.png">
     <link rel="stylesheet" type="text/css" href="/shared/css/root.css">
     <link rel="stylesheet" type="text/css" href="/shared/css/default.css">
+    <link rel="stylesheet" type="text/css" href="/shared/css/footer.css">
+    <script type="module" src="/shared/scripts/start_up.js"></script>
   </head>
   <body>
     <nav class="border"></nav>
     <main class="border"></main>
-    <footer class="border"></footer>
+    <footer class="border">
+      <div id="clock" class="border"></div>
+    </footer>
   </body>
 </html>
