--- a/index.html
+++ b/index.html
@@ -8,13 +8,18 @@
     <meta name="description" content="7m45h home page">
     <meta name="keywords" content="7m45h, home">
     <link rel="icon" type="image/png" href="/shared/images/favicon_dark.png">
-    <link rel="stylesheet" type="text/css" href="/shared/css/root.css">
+    <link rel="stylesheet" type="text/css" href="/shared/css/variables.css">
     <link rel="stylesheet" type="text/css" href="/shared/css/default.css">
+    <link rel="stylesheet" type="text/css" href="/shared/css/navbar.css">
     <link rel="stylesheet" type="text/css" href="/shared/css/footer.css">
     <script type="module" src="/shared/scripts/start_up.js"></script>
   </head>
-  <body>
-    <nav class="border"></nav>
+  <body class="theme-dark">
+    <nav class="border">
+      <div id="theme-switch-div" class="border">
+        <div id="theme-switch-btn"></div>
+      </div>
+    </nav>
     <main class="border"></main>
     <footer class="border">
       <div id="clock" class="border"></div>
