half way header

--- a/index.html
+++ b/index.html
@@ -10,16 +10,20 @@
     <link rel="icon" type="image/png" href="/shared/images/favicon_dark.png">
     <link rel="stylesheet" type="text/css" href="/shared/css/variables.css">
     <link rel="stylesheet" type="text/css" href="/shared/css/default.css">
-    <link rel="stylesheet" type="text/css" href="/shared/css/navbar.css">
+    <link rel="stylesheet" type="text/css" href="/shared/css/header.css">
     <link rel="stylesheet" type="text/css" href="/shared/css/footer.css">
     <script type="module" src="/shared/scripts/start_up.js"></script>
   </head>
   <body class="theme-dark">
-    <nav class="border">
+    <header class="border">
+      <div id="nav-toggle" class="border">
+        <div id="nav-toggle-btn"></div>
+      </div>
+      <h1 id="page-title">home</h1>
       <div id="theme-switch-div" class="border">
         <div id="theme-switch-btn"></div>
       </div>
-    </nav>
+    </header>
     <main class="border"></main>
     <footer class="border">
       <div id="clock" class="border"></div>
