--- a/index.html
+++ b/index.html
@@ -16,8 +16,8 @@
   </head>
   <body class="theme-dark">
     <header class="border">
-      <div id="nav-toggle" class="border">
-        <div id="nav-toggle-btn"></div>
+      <div id="tmp-left-item" class="border">
+        <div id="tli-squre"></div>
       </div>
       <h1 id="page-title">home</h1>
       <div id="theme-switch-div" class="border">
