--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
     </header>
     <main class="border"></main>
     <footer class="border">
-      <div id="clock" class="border"></div>
+      <div id="last-mod-date" class="border">2024-02-07</div>
     </footer>
   </body>
 </html>
