--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <link rel="icon" type="image/png" href="/shared/images/favicon_dark.png">
     <link rel="stylesheet" type="text/css" href="/shared/css/variables.css">
     <link rel="stylesheet" type="text/css" href="/shared/css/default.css">
+    <link rel="stylesheet" type="text/css" href="/shared/css/navbar.css">
     <link rel="stylesheet" type="text/css" href="/shared/css/header.css">
     <link rel="stylesheet" type="text/css" href="/shared/css/footer.css">
     <script type="module" src="/shared/scripts/start_up.js"></script>
@@ -19,6 +20,12 @@
       <div id="home-btn-div" class="border">
         <a id="home-btn" href="/"></a>
       </div>
+      <nav id="nav-bar" class="border">
+        <a href="/#blog" class="nav-bar-item">blog</a>
+        <a href="/#canv" class="nav-bar-item">canv</a>
+        <a href="/#etc" class="nav-bar-item">etc</a>
+        <a href="/#about" class="nav-bar-item">about</a>
+      </nav>
       <h1 id="page-title">home</h1>
       <div id="theme-switch-div" class="border">
         <div id="theme-switch-btn"></div>
