--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
     <link rel="stylesheet" type="text/css" href="/shared/css/default.css">
     <link rel="stylesheet" type="text/css" href="/shared/css/navbar.css">
     <link rel="stylesheet" type="text/css" href="/shared/css/header.css">
+    <link rel="stylesheet" type="text/css" href="/shared/css/main.css">
     <link rel="stylesheet" type="text/css" href="/shared/css/footer.css">
     <script type="module" src="/shared/scripts/start_up.js"></script>
   </head>
@@ -31,8 +32,16 @@
         <div id="theme-switch-btn"></div>
       </div>
     </header>
-    <main class="border"></main>
+    <main class="border">
+      <section id="blog" class="main-section"></section>
+      <section id="canv" class="main-section"></section>
+      <section id="etc" class="main-section"></section>
+      <section id="about" class="main-section"></section>
+    </main>
     <footer class="border">
+      <div id="repo-link-div" class="border">
+        <a id="repo-link-btn" class="border" href="https://github.com/7m45h/7m45h.github.io" target="_blank"></a>
+      </div>
       <div id="last-mod-date" class="border">2024-02-07</div>
     </footer>
   </body>
