new repo link icon

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
     </main>
     <footer class="border">
       <div id="repo-link-div" class="border">
-        <a id="repo-link-btn" class="border" href="https://github.com/7m45h/7m45h.github.io" target="_blank"></a>
+        <a id="repo-link-btn" class="border" href="https://github.com/7m45h/7m45h.github.io" target="_blank">&#9650;</a>
       </div>
       <div id="last-mod-date" class="border">2024-02-07</div>
     </footer>
