mv repeating css to class

--- a/index.html
+++ b/index.html
@@ -18,17 +18,17 @@
   </head>
   <body class="theme-dark">
     <header class="border">
-      <div id="home-btn-div" class="border">
+      <div id="home-btn-div" class="border bar-item">
         <a id="home-btn" href="/"></a>
       </div>
-      <nav id="nav-bar" class="border">
+      <nav id="nav-bar" class="border bar-item">
         <a href="/#blog" class="nav-bar-item">blog</a>
         <a href="/#canv" class="nav-bar-item">canv</a>
         <a href="/#etc" class="nav-bar-item">etc</a>
         <a href="/#about" class="nav-bar-item">about</a>
       </nav>
-      <h1 id="page-title">home</h1>
-      <div id="theme-switch-div" class="border">
+      <h1 id="page-title" class="bar-item">home</h1>
+      <div id="theme-switch-div" class="border bar-item">
         <div id="theme-switch-btn"></div>
       </div>
     </header>
@@ -39,10 +39,10 @@
       <section id="about" class="main-section"></section>
     </main>
     <footer class="border">
-      <div id="repo-link-div" class="border">
-        <a id="repo-link-btn" class="border" href="https://github.com/7m45h/7m45h.github.io" target="_blank">&#9650;</a>
+      <div id="repo-link-div" class="border bar-item">
+        <a id="repo-link-btn" href="https://github.com/7m45h/7m45h.github.io" target="_blank">&#9650;</a>
       </div>
-      <div id="last-mod-date" class="border">2024-02-07</div>
+      <div id="last-mod-date" class="border bar-item">2024-02-07</div>
     </footer>
   </body>
 </html>
