--- a/index.html
+++ b/index.html
@@ -14,6 +14,8 @@
     <link rel="stylesheet" type="text/css" href="/shared/css/header.css">
     <link rel="stylesheet" type="text/css" href="/shared/css/main.css">
     <link rel="stylesheet" type="text/css" href="/shared/css/footer.css">
+    <link rel="modulepreload" href="/shared/scripts/start_up.js">
+    <link rel="modulepreload" href="/shared/scripts/color_manager.js">
     <script type="module" src="/shared/scripts/start_up.js"></script>
   </head>
   <body class="theme-dark">
