--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
     <link rel="stylesheet" type="text/css" href="/shared/css/navbar.css">
     <link rel="stylesheet" type="text/css" href="/shared/css/header.css">
     <link rel="stylesheet" type="text/css" href="/shared/css/main.css">
+    <link rel="stylesheet" type="text/css" href="/shared/css/card_deck.css">
     <link rel="stylesheet" type="text/css" href="/shared/css/footer.css">
     <link rel="modulepreload" href="/shared/scripts/start_up.js">
     <link rel="modulepreload" href="/shared/scripts/color_manager.js">
@@ -35,7 +36,14 @@
       </div>
     </header>
     <main class="border">
-      <section id="blog" class="main-section"></section>
+      <section id="blog" class="main-section">
+        <div class="page-card-deck">
+          <a class="border page-card" href="/"><span>essay_on_subnautica</span></a>
+          <a class="border page-card" href="/"><span>evil_list</span></a>
+          <a class="border page-card" href="/"><span>foss_v_proprietary</span></a>
+          <a class="border page-card" href="/"><span>scary_library</span></a>
+        </div>
+      </section>
       <section id="canv" class="main-section"></section>
       <section id="etc" class="main-section"></section>
       <section id="about" class="main-section"></section>
