--- a/index.html
+++ b/index.html
@@ -49,9 +49,7 @@
       <section id="about" class="main-section"></section>
     </main>
     <footer class="border">
-      <div id="repo-link-div" class="border bar-item">
-        <a id="repo-link-btn" href="https://github.com/7m45h/7m45h.github.io" target="_blank">&#9650;</a>
-      </div>
+      <a id="repo-link" class="border bar-item a-ext" href="https://github.com/7m45h/7m45h.github.io" target="_blank">src</a>
       <div id="last-mod-date" class="border bar-item">2024-02-07</div>
     </footer>
   </body>
