--- a/index.html
+++ b/index.html
@@ -21,8 +21,8 @@
   </head>
   <body class="theme-dark">
     <header class="border">
-      <div id="home-btn-div" class="border bar-item">
-        <a id="home-btn" href="/"></a>
+      <div class="border bar-item square">
+        <a id="home-btn" class="square" href="/"></a>
       </div>
       <nav id="nav-bar" class="border bar-item">
         <a href="/#blog" class="nav-bar-item">blog</a>
@@ -31,8 +31,8 @@
         <a href="/#about" class="nav-bar-item">about</a>
       </nav>
       <h1 id="page-title" class="bar-item">home</h1>
-      <div id="theme-switch-div" class="border bar-item">
-        <div id="theme-switch-btn"></div>
+      <div class="border bar-item square">
+        <div id="theme-switch-btn" class="square"></div>
       </div>
     </header>
     <main class="border">
