no js theme switch

--- a/index.html
+++ b/index.html
@@ -15,11 +15,8 @@
     <link rel="stylesheet" type="text/css" href="/shared/css/main.css">
     <link rel="stylesheet" type="text/css" href="/shared/css/card_deck.css">
     <link rel="stylesheet" type="text/css" href="/shared/css/footer.css">
-    <link rel="modulepreload" href="/shared/scripts/start_up.js">
-    <link rel="modulepreload" href="/shared/scripts/color_manager.js">
-    <script type="module" src="/shared/scripts/start_up.js"></script>
   </head>
-  <body class="theme-dark">
+  <body>
     <header class="border">
       <div class="border bar-item square">
         <a id="home-btn" class="square" href="/"></a>
@@ -32,7 +29,7 @@
       </nav>
       <h1 id="page-title" class="bar-item">home</h1>
       <div class="border bar-item square">
-        <div id="theme-switch-btn" class="square"></div>
+        <input id="theme-switch-btn" class="square" type="checkbox">
       </div>
     </header>
     <main class="border">
