--- a/index.html
+++ b/index.html
@@ -33,17 +33,17 @@
       </div>
     </header>
     <main class="border">
-      <section id="blog" class="main-section">
+      <section id="blog">
         <div class="page-card-deck">
           <a class="border page-card" href="/"><span>essay_on_subnautica</span></a>
-          <a class="border page-card" href="/"><span>evil_list</span></a>
+          <a class="border page-card" href="/blog/evil_list"><span>evil_list</span></a>
           <a class="border page-card" href="/"><span>foss_v_proprietary</span></a>
           <a class="border page-card" href="/"><span>scary_library</span></a>
         </div>
       </section>
-      <section id="canv" class="main-section"></section>
-      <section id="etc" class="main-section"></section>
-      <section id="about" class="main-section"></section>
+      <section id="canv"></section>
+      <section id="etc"></section>
+      <section id="about"></section>
     </main>
     <footer class="border">
       <a id="repo-link" class="border bar-item a-ext" href="https://github.com/7m45h/7m45h.github.io" target="_blank">src</a>
