--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
         <a href="/#etc" class="nav-bar-item">etc</a>
         <a href="/#about" class="nav-bar-item">about</a>
       </nav>
-      <h1 id="page-title" class="bar-item">home</h1>
+      <h1 id="page-title" class="border bar-item spacer">home</h1>
       <div class="border bar-item square">
         <input id="theme-switch-btn" class="square" type="checkbox">
       </div>
@@ -47,6 +47,10 @@
     </main>
     <footer class="border">
       <a id="repo-link" class="border bar-item a-ext" href="https://github.com/7m45h/7m45h.github.io" target="_blank">src</a>
+      <div id="powerd-by" class="border bar-item">
+        <a class="a-ext" href="https://pages.github.com/">github pages</a>
+      </div>
+      <div class="border bar-item spacer"></div>
       <div id="last-mod-date" class="border bar-item">2024-02-07</div>
     </footer>
   </body>
