--- a/index.html
+++ b/index.html
@@ -46,9 +46,9 @@
       <section id="about"></section>
     </main>
     <footer class="border">
-      <a id="repo-link" class="border bar-item a-ext" href="https://github.com/7m45h/7m45h.github.io" target="_blank">src</a>
+      <a id="repo-link" class="border bar-item" href="https://github.com/7m45h/7m45h.github.io" target="_blank">src</a>
       <div id="powerd-by" class="border bar-item">
-        <a class="a-ext" href="https://pages.github.com/">github pages</a>
+        <a href="https://pages.github.com/" target="_blank">github pages</a>
       </div>
       <div class="border bar-item spacer"></div>
       <div id="last-mod-date" class="border bar-item">2024-02-07</div>
